💄 fix: Remove page scrolls overflow

--- a/assets/style/calculator-style.css
+++ b/assets/style/calculator-style.css
@@ -56,12 +56,12 @@ body {
 
 body {
     display: grid;
-    width: 100vw;
     height: 100vh;
     align-items: center;
     justify-items: center;
     font-family: "Odibee Sans";
     font-size: 16px;
+    margin: 0;
 }
 
 .display {
